--- a/file/index.html
+++ b/file/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
+        <!-- nav start -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -42,7 +43,98 @@
                 </div>
             </div>
         </nav>
+        <!-- nav end -->
+
+
+        <!-- slider start -->
+
+        <section>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-info rounded-2 p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h1>Cool Dude Headphone</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum necessitatibus
+                                        officia
+                                        error ullam maxime neque explicabo rem dolor repellendus quas!</p>
+                                    <input type="button" value="Buy Now">
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item bg-info rounded-2 p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h1>Cool Dude Headphone</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum necessitatibus
+                                        officia
+                                        error ullam maxime neque explicabo rem dolor repellendus quas!</p>
+                                    <input type="button" value="Buy Now">
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item bg-info rounded-2 p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h1>Cool Dude Headphone</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum necessitatibus
+                                        officia
+                                        error ullam maxime neque explicabo rem dolor repellendus quas!</p>
+                                    <input type="button" value="Buy Now">
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- slider end -->
     </header>
+
+    <main>
+        <!-- Catagories start -->
+
+        <div class="container text-center my-5">
+            <div class="row g-2">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="p-3 border bg-primary rounded-3 d-flex align-items-center ">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="./images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="p-3 border bg-success rounded-3 d-flex align-items-center ">
+                        <h1 class="text-white">shoes</h1>
+                        <img src="./images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="p-3 border bg-warning rounded-3 d-flex align-items-center ">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="./images/categories/bag.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Catagories end -->
+    </main>
 
 
 
