--- a/file/index.html
+++ b/file/index.html
@@ -139,7 +139,8 @@
 
         <!-- shoes grid start -->
         <section class="container">
-            <div class="row row-cols-1 row-cols-md-2 row-col-lg-3 g-4">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-3 row-col-lg-4 g-4">
                 <div class="col">
                     <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
                         <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -179,9 +180,57 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- shoes grid end -->
+
+        <!-- bag grid start -->
+        <section class="container">
+            <h2>Bagpack</h2>
+            <div class="row row-cols-1 row-cols-md-3 row-col-lg-4 g-4 my-5">
                 <div class="col">
                     <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
-                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                        <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
+                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -195,7 +244,7 @@
                 </div>
             </div>
         </section>
-        <!-- shoes grid off -->
+        <!-- bag grid end -->
     </main>
 
 
