--- a/file/index.html
+++ b/file/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="container">
         <!-- nav start -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="./images/logo.png" alt="">
@@ -31,13 +31,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Bagpack</a>
+                            <a class="nav-link" href="#bagpack">Bagpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info rounded-2 p-5">
+                    <div class="carousel-item bg-primary rounded-2 p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -111,22 +111,22 @@
 
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-2 Catagories">
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-primary rounded-3 d-flex align-items-center ">
-                            <h1 class="text-white">Watch</h1>
+                            <h1 class="text-white hlf-wd">Watch</h1>
                             <img src="./images/categories/watch.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-success rounded-3 d-flex align-items-center ">
-                            <h1 class="text-white">shoes</h1>
+                            <h1 class="text-white hlf-wd">shoes</h1>
                             <img src="./images/categories/shoes.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center ">
-                            <h1 class="text-white">Bag</h1>
+                            <h1 class="text-white hlf-wd">Bag</h1>
                             <img src="./images/categories/bag.png" alt="">
                         </div>
                     </div>
@@ -138,7 +138,7 @@
         <!-- Catagories end -->
 
         <!-- shoes grid start -->
-        <section class="container">
+        <section class="container" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-3 row-col-lg-4 g-4">
                 <div class="col">
@@ -185,7 +185,7 @@
         <!-- shoes grid end -->
 
         <!-- bag grid start -->
-        <section class="container">
+        <section class="container" id="bagpack">
             <h2>Bagpack</h2>
             <div class="row row-cols-1 row-cols-md-3 row-col-lg-4 g-4 my-5">
                 <div class="col">
@@ -228,27 +228,33 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card border border-0 shadow-lg p-3 mb-5 bg-body rounded h-100">
-                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Red Airmax</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show that equal
-                                height action.</p>
-                        </div>
-                        <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
         <!-- bag grid end -->
+
+        <!-- subs start -->
+        <section style="height: 45vh;" id="subscribe"
+            class="container d-flex justify-content-center align-items-center flex-column bg-info rounded-3">
+            <div>
+                <h2>LET'S GET IN TOUCH</h2>
+                <p>GEt Update on Sales,spacial and more</p>
+                <form>
+                    <div class=" mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </section>
+        <!-- subs end -->
     </main>
 
 
+    <footer class="mt-5 text-center">
+        <p><small>2022,copyrigt to me</small></p>
 
+    </footer>
 
 
 
